# clever_config

./: .flake8  Makefile  README.md  mypy.ini  pre-push.sh  pyproject.toml
.githooks/: pre-commit.sh
.github/workflows/: publish-pypi.yml
clever_config/: dict_traversal.py  utils.py
clever_config/actions/: __init__.py  aws.py  base.py  env.py
tests/: conftest.py
tests/unit_tests/: test_anchor_with_default.py  test_deserialize_values.py  test_secret_manager_keys_action.py
