[project]
name = "clever_config"
version = "3.2.2"
description = "Tricky config with features"
repository = "https://github.com/osipov-andrey/python_smart_config"
authors = [
    {name = "andrey.a.osipov", email = "developer.osipov@gmail.com"},
]
include = ["clever_config/py.typed"]
requires-python = ">=3.12,<4.0"
dependencies = [
    "boto3 (~=1.40.2)",
    "requests (~=2.32.3)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
PyYAML = "^6.0.1"
mypy = "^0.981"
pytest-sugar = "^0.9.4"
pytest-clarity = "^1.0.1"
pytest-coverage = "^0.0"
isort = "^5.9.2"
types-requests = "^2.25.0"
flake8-absolute-import = "^1.0"
Faker = "^8.10.1"
types-PyYAML = "^5.4.3"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.flake8]
extend-ignore = 'E203'
max-line-length = 120
count = true
statistics = true
