[project]
name = "clever_config"
version = "3.2.4"
description = "Free your application from wiring configuration data and secrets by hand—walk nested dict/list configs and resolve typed anchors in place (KMS, SSM, Secrets Manager, environment variables)."
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "config",
    "configuration",
    "aws",
    "boto3",
    "kms",
    "ssm",
    "parameter-store",
    "secrets-manager",
    "environment-variables",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
authors = [
    { name = "Andrey Osipov", email = "developer.osipov@gmail.com" },
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "boto3 (~=1.40.2)",
    "requests (~=2.32.3)",
]

[project.urls]
Homepage = "https://github.com/osipov-andrey/clever_config"
Repository = "https://github.com/osipov-andrey/clever_config"
Issues = "https://github.com/osipov-andrey/clever_config/issues"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
PyYAML = "^6.0.1"
mypy = "^0.981"
pytest-sugar = "^0.9.4"
pytest-clarity = "^1.0.1"
pytest-coverage = "^0.0"
isort = "^5.9.2"
types-requests = "^2.25.0"
flake8-absolute-import = "^1.0"
Faker = "^8.10.1"
types-PyYAML = "^5.4.3"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "attributedict.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "faker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[tool.flake8]
extend-ignore = 'E203'
max-line-length = 120
count = true
statistics = true
